--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+Now part of the ZUGFeRD community:
+https://github.com/zugferd
+
+
 The ZUGFeRD library allows to create XML files as required by German electronic invoice initiative ZUGFeRD.
 
 The library is meant to be as simple as possible, however it is not straight forward to use as the resulting XML file contains a complete invoice in XML format. Please take a look at the ZUGFeRD-Test project to find sample creation code. This code creates the same XML file as shipped with the ZUGFeRD information package.
@@ -7,12 +11,12 @@ The code used here is:
 InvoiceDescriptor desc = InvoiceDescriptor.CreateInvoice("471102", new DateTime(2013, 6, 5), CurrencyCodes.EUR, "GE2020211-471102");
 desc.Profile = Profile.Comfort;
 desc.ReferenceOrderNo = "AB-312";
-desc.AddNote("Rechnung gem‰ﬂ Bestellung Nr. 2013-471331 vom 01.03.2013.");
+desc.AddNote("Rechnung gem√§√ü Bestellung Nr. 2013-471331 vom 01.03.2013.");
 desc.AddNote("Es bestehen Rabatt- und Bonusvereinbarungen.", "AAK");
-desc.SetBuyer("Kunden Mitte AG", "69876", "Frankfurt", "Kundenstraﬂe", "15", "DE", "88", "4000001987658");
+desc.SetBuyer("Kunden Mitte AG", "69876", "Frankfurt", "Kundenstra√üe", "15", "DE", "88", "4000001987658");
 desc.AddBuyerTaxRegistration("DE234567890", "VA");
 desc.SetBuyerContact("Hans Muster");
-desc.SetSeller("Lieferant GmbH", "80333", "M¸nchen", "Lieferantenstraﬂe", "20", "DE", "88", "4000001123452");
+desc.SetSeller("Lieferant GmbH", "80333", "M√ºnchen", "Lieferantenstra√üe", "20", "DE", "88", "4000001123452");
 desc.AddSellerTaxRegistration("201/113/40209", "FC");
 desc.AddSellerTaxRegistration("DE123456789", "VA");
 desc.SetBuyerOrderReferenceDocument("2013-471331", new DateTime(2013, 03, 01));
